Fix section content for overflowing.

--- a/style/style.css
+++ b/style/style.css
@@ -86,6 +86,7 @@
         & > .content-body {
             padding: 1rem 2rem;
             width: 75%;
+            overflow-y: auto;
             background: #7b7bd9;
 
             & > .search-bar {
@@ -126,13 +127,33 @@
 
             & > .content {
                 width: 100%;
-                height: 87%;
+                height:max-content;
                 margin-top: 4rem;
                 background: #7bd97b;
 
+                .icon-box{
+                    width: 30px;
+                    height: 30px;
+                    border-radius: 7px;
+                    background-color: #4d7eb7;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-right: 10px;
+                }
+
+                .title{
+                    gap: 1rem;
+                    display: flex;
+                    align-items: center;
+                    font-size: 20px;
+                    font-weight: 600;
+                    padding: 0 0 2rem 0;
+                }
+
                 & > .dashboard-section {
                     width: 100%;
-                    height: 50%;
+                    height: 20rem;
                     background: #47b5b9;
 
                     & > .dashboard-content{
@@ -175,30 +196,11 @@
 
                 & > .recent-activity-section{
                     width: 100%;
-                    height: 50%;
                     background: #8ab1fe;
 
                 }
 
-                .icon-box{
-                    width: 30px;
-                    height: 30px;
-                    border-radius: 7px;
-                    background-color: #4d7eb7;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    margin-right: 10px;
-                }
-
-                .title{
-                    gap: 1rem;
-                    display: flex;
-                    align-items: center;
-                    font-size: 20px;
-                    font-weight: 600;
-                    padding: 0 0 2rem 0;
-                }
+                
             }
             
         }
